Работа со статусом объявления

--- a/src/app/components/ad-creating/ad-creating.component.html
+++ b/src/app/components/ad-creating/ad-creating.component.html
@@ -46,7 +46,7 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="6">Адрес</nz-form-label>
+          <nz-form-label style="height: 40px;" [nzSpan]="6">Адрес</nz-form-label>
           <nz-form-control [nzSpan]="14" [nzErrorTip]="errorTip">
               <ngx-dadata nz-input 
                 formControlName="address"
