--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,8 @@
 .footer {
-  background-color: #343434;
-  
+  margin-top: 25px;
+  background-color: #3f3f3f;
+  // position: fixed;
+  // bottom: 0;
   
   width: 100%;
   &__nav {
