--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<div class="admin">
+<div class="admin" *ngIf="user.userRole == 'Admin'">
   <div class="" *ngIf="!(loadingService.isLoading$ | async); else loading">
     <div class="admin__title">Добавить категорию</div>
     <form
@@ -112,3 +112,5 @@
     <app-spinner></app-spinner>
   </div>
 </ng-template>
+
+
