--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="profile">
+  <div class="profile" *ngIf="user$ != null">
     <div class="profile__avatar">
       
       <nz-avatar *ngIf="screenWidth > 700" class="profile__avatar-img" [nzSize]="250" nzSrc="{{ user$.avatar }}" nzIcon="user" nzFallback=""></nz-avatar>
@@ -31,3 +31,10 @@
     
   </div>
 </div>
+
+
+<ng-template #loading>
+  <div style="margin-top: 200px">
+    <app-spinner class="spinner"></app-spinner>
+  </div>
+</ng-template>
